internal/app/playbooks/role/catalogs/SampleCode/Python/files/python-api-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-demo-api-svc
  namespace: pythonapi
spec:
  selector:
    app: python-demo-api
  ports:
  - protocol: TCP
    name: http
    port: 8000
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo-api-deploy
  namespace: pythonapi
  labels:
    app: python-demo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-demo-api
  template:
    metadata:
      labels:
        app: python-demo-api     
    spec:
      containers:
        - name: python-demo-api
          image: oscka/python-demo-api:v0.1
          ports:
          - name: http
            containerPort: 8000
