internal/app/playbooks/role/catalogs/SampleCode/Python/files/python-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-demo-api-ingress
  namespace: pythonapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "python-api.cnstudio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: python-demo-api-svc
            port: 
              number: 8000
